--- a/exso6/correctionjs6.html
+++ b/exso6/correctionjs6.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,13 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="script.js"></script>
+    <script src="./correctionjs6.js"
 
-    <label>nombre</label>
-    <input type="text">
 
-    <label>Valider</label>
-    <button onclick="recommancer"> cliquer ici</button>
-
+    
 </body>
 </html>
