--- a/exso6/correctionjs6.html
+++ b/exso6/correctionjs6.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./correctionjs6.js"
+    <script src="./correctionjs6.js"</script>
 
 
     
