--- a/exso6/index (6).html
+++ b/exso6/index (6).html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./script.js"
+
+    <label>Prix : </label>
+    <input type="number" id="prix"/></br>
+
+    <button onclick=getPrix()>Valider</button>
+    
+    <script src="./scriptFunction.js"></script>
 </body>
 </html>
